[project]
name = "gpu-umap-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.8.0",
    "colorcet>=3.1.0",
    "cupy-cuda13x>=13.6.0",
    "datashader>=0.18.2",
    "holoviews>=1.21.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pyarrow>=22.0.0",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]
